--- a/index.html
+++ b/index.html
@@ -6,17 +6,33 @@
     <meta htstylestp-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
+
     <link href='./css/styles.css' rel='stylesheet'>
 </head>
 
 <body>
-    <p>
-        <marquee>This is done using GIT</marquee>
-    </p>
+
+    <marquee>This is done using GIT, my first experience</marquee>
+
     <h1>Welcome</h1>
     <section class="infomation">
-        <button>Click me</button>
+
+        <button type="button" onclick="random_bg_color()">Click me</button>
     </section>
+    <script>
+        function random_bg_color() {
+            var x = Math.floor(Math.random() * 256);
+            var y = Math.floor(Math.random() * 256);
+            var z = Math.floor(Math.random() * 256);
+            var bgColor = "rgb(" + x + "," + y + "," + z + ")";
+            //document.write(bgColor);
+
+            //document.body.style.background = bgColor;
+            document.body.style.background = bgColor;
+        }
+
+        random_bg_color();
+    </script>
 </body>
 
 </html>
